# iupette

./: .gitignore  CMakeLists.txt  README.md  test_client.py
include/: ButtonWidget.h  ComboBoxWidget.h  LabelWidget.h  ListBoxWidget.h  RectangleWidget.h  TextBoxWidget.h  Widget.h  Window.h  iupette.h
server/src/: main.cpp
src/: ButtonWidget.cpp  ComboBoxWidget.cpp  LabelWidget.cpp  ListBoxWidget.cpp  RectangleWidget.cpp  TextBoxWidget.cpp  Widget.cpp  Window.cpp  iupette.cpp  main.cpp
